Removed Empty Spaces and added Title

--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
-<header> Zachary's Website </header>
+<title> Zachary's Website </title>
+
 <body> 
-
+	
 <center> Testing </center>
-
-
-
-
-
-
-
-
+	
 </body>
