Edit to Website & also Doge

--- a/index.html
+++ b/index.html
@@ -2,6 +2,17 @@
 
 <body> 
 	
-<center> Testing </center>
+	<center> 			<h1> Welcome </h1> 
+	
+		<p> I'm New To HTML so please enjoy this picture <br>
+			of my dog while i create this site...
+		</p>
+		
+	<img scr= "Assets/Dog.jpg">
+	
+	
+	
+	</center>
+	
 	
 </body>
