--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	
 		<p> I'm New To HTML so please enjoy this picture <br>
 			of my dog while i create this site...
+			
+			<br> <br> <br> OR NOT...
 		</p>
 		
 	<img scr= "Assets/Dog.jpg">
