--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <title> Zachary's Website </title>
 
+<style type="text/css">
+.Test {
+}
+</style>
+
 <body> 
 	
 	<center> 			<h1> Welcome </h1> 
 	
-		<p> I'm New To HTML so please enjoy this picture <br>
-			of my dog while i create this site...
-			
-			<br> <br> <br> OR NOT...
-		</p>
+	<p> 	I'm New To HTML so please enjoy this picture <br>
+			of a snail I made...
+	</p>
 		
-	<img scr= "Assets/Dog.jpg">
-	
-	
-	
-	</center>
+      <img src="Assets/Snail.png" width="100" height="100" alt=""/>
+    </center>
 	
 	
 </body>
