Changed Snail To Loading

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 			of a snail I made...
 	</p>
 		
-      <img src="Assets/Snail.png" width="100" height="100" alt=""/>
+      <img src="Assets/Loading.gif" width="256" height="256" alt=""/>
     </center>
 	
 	
