Clean up and added Home Page

--- a/index.html
+++ b/index.html
@@ -1,20 +1,10 @@
-<title> Zachary's Website </title>
+<title>Zachary's Website</title>
+<style type="text/css"></style>
 
-<style type="text/css">
-.Test {
-}
-</style>
-
-<body> 
-	
-	<center> 			<h1> Welcome </h1> 
-	
-	<p> 	I'm New To HTML so please enjoy this picture <br>
-			of a snail I made...
-	</p>
-		
-      <img src="Assets/Loading.gif" width="256" height="256" alt=""/>
-    </center>
-	
-	
+<body>
+<center>
+  <h1> Welcome To my Future Portfolio </h1>
+  <p> I am currenlt working on creating this website... </p>
+  <a href="home.html"><img src="Assets/Loading.gif" width="256" height="256" alt=""></a>
+</center>
 </body>
