Addes Css & Working on Homepage

--- a/home.html
+++ b/home.html
@@ -1,9 +1,34 @@
+<!DOCTYPE html>
 <html>
+<head>
+<meta charset="utf-8">
+<meta name ="viewport" content="width=device-width">
+<title>Zachary's Website | Home</title>
+<link rel="stylesheet" href="css/ style.css">
+</head>
 <body>
-<p>
-  <Center>
-    you are here because you clicked a thing
-  </Center>
-</p>
+<header>
+  <div class="conatiner">
+    <h1> Zachary Marc Ayotte </h1>
+    <div class="Categories"> </div>
+    <ul>
+      <li> <a href= "index.html"> Contact me </a></li>
+      <li> <a href= "index.html"> Resume </a></li>
+      <li> <a href= "index.html"> Projects </a></li>
+	  <li> <a href= "index.html"> About me </a></li>
+	  <li> <a href= "index.html"> Home </a></li>
+    </ul>
+  </div>
+  </div>
+</header>
+<section id="showcase">
+  <div class="container">
+    <h1> More text </h1>
+    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis cursus nec tellus sed laoreet. Donec et sapien et orci pretium dignissim maximus quis orci. Ut lectus velit, consectetur id semper eget, pellentesque ut arcu. Morbi tempor justo elit, sed vulputate odio efficitur nec. Curabitur laoreet dictum neque at bibendum. Nulla orci orci, elementum at ultricies id, maximus eget tellus. Proin consectetur vel lorem ac luctus. Donec vel nunc tortor. Nulla quis nulla eu mi tristique ultricies sit amet et nisi.<br>
+      Praesent mi mauris, tempus at accumsan a, sagittis et sapien. Praesent ornare eu justo et consequat. Nam iaculis massa nec nulla interdum placerat. Nulla facilisi. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque viverra eros sed metus aliquam venenatis. Sed in euismod enim. In tempus ultricies fringilla. Donec ac arcu viverra leo auctor convallis sit amet sit amet augue. Sed malesuada lorem non lorem accumsan, ac feugiat odio blandit. Sed ac fringilla sem. Nunc ex justo, maximus et lorem et, venenatis imperdiet massa.<br>
+      Cras eget justo at turpis posuere tincidunt. Integer eu luctus ex, ac dignissim neque. Maecenas tempor facilisis tortor mattis accumsan. Praesent rutrum felis at mi sagittis volutpat. Cras ornare ligula eu turpis mattis, in mattis sem sodales. In vitae nisl eget urna accumsan accumsan non vitae justo. Curabitur pharetra nisl ac feugiat finibus. Duis ornare, felis id lobortis lobortis, tellus purus convallis tellus, vel ultricies eros dolor at sem. Nunc varius, erat ac gravida suscipit, nulla justo hendrerit eros, sed viverra est felis fringilla tortor. Morbi eget ipsum vitae nisi congue tristique. Sed non interdum magna. Duis tristique urna vitae tortor ornare, id imperdiet metus varius.<br>
+    </p>
+  </div>
+</section>
 </body>
 </html>
