--- a/index.html
+++ b/index.html
@@ -1,10 +1,38 @@
-<title>Zachary's Website</title>
-<style type="text/css"></style>
-
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name ="viewport" content="width=device-width">
+<title>Zachary's Website | Home</title>
+<link rel="stylesheet" href="style.css">
+</head>
 <body>
-<center>
-  <h1> Welcome To my Future Portfolio </h1>
-  <p> I am currenlt working on creating this website... </p>
-  <a href="home.html"><img src="Assets/Loading.gif" width="256" height="256" alt=""></a>
-</center>
+<header>
+  <div class="Top">
+	  
+    <div class="name">
+      <h1> Zachary Ayotte </h1>
+    </div>
+	  <nav>
+	  	  <ul>
+			  <div class="Options">
+			  <li> <a href="index.html"> Home </a></li>
+			  <li> <a href="index.html"> About me </a></li>
+			  <li> <a href="index.html"> My Projects </a></li>
+			  <li> <a href="index.html"> Resume </a></li>
+			  <li> <a href="index.html"> Contact me </a></li>
+			  </div>
+		  </ul>
+	  </aside>
+  </div>
+</header>
+	<div class="body">
+	
+	
+	Hello
+	
+	
+	
+	</div>
 </body>
+</html>
