--- a/index.html
+++ b/index.html
@@ -6,33 +6,18 @@
 <title>Zachary's Website | Home</title>
 <link rel="stylesheet" href="style.css">
 </head>
-<body>
-<header>
-  <div class="Top">
-	  
-    <div class="name">
-      <h1> Zachary Ayotte </h1>
-    </div>
-	  <nav>
-	  	  <ul>
-			  <div class="Options">
-			  <li> <a href="index.html"> Home </a></li>
-			  <li> <a href="index.html"> About me </a></li>
-			  <li> <a href="index.html"> My Projects </a></li>
-			  <li> <a href="index.html"> Resume </a></li>
-			  <li> <a href="index.html"> Contact me </a></li>
-			  </div>
-		  </ul>
-	  </aside>
-  </div>
-</header>
-	<div class="body">
-	
-	
-	Hello
-	
-	
-	
-	</div>
-</body>
+	<header>
+	<img src="Assets/Logo.png" height="100%" alt=""/>
+		Zachary M Ayotte
+	</header>
+<nav>
+  
+  <ul>
+    <li><a>Contact Me</a></li>
+    <li><a>Resume</a></li>
+    <li><a>Projects</a></li>
+    <li><a>About Me</a></li>
+    <li><a>Home</a></li>
+  </ul>
+</nav>
 </html>
