--- a/index.html
+++ b/index.html
@@ -14,8 +14,16 @@
 <nav>
   
   <ul>
-    <li><a>Contact Me</a></li>
-    <li><a>Resume</a></li>
+    <li><a href="mailto:Zachary.M.Ayotte@hotmail.com">Contact Me</a></li>
+	<li><a>Resume</a></li>
+	<li><a>Social Media</a>
+	  <ul>
+		  <li><a>Testing</a></li>
+		  <li><a>One</a></li>
+		  <li><a>stuff</a></li>
+		  <li><a>stuff</a></li>
+	  </ul>
+	  </li>
     <li><a>Projects</a></li>
     <li><a>About Me</a></li>
     <li><a>Home</a></li>
