Added Linkedin Link

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<li><a>Resume</a></li>
 	<li><a>Social Media</a>
 	  <ul>
-		  <li><a>Testing</a></li>
+		  <li><a href="www.linkedin.com/in/zacharyMayotte">Linkedin</a></li>
 		  <li><a>One</a></li>
 		  <li><a>stuff</a></li>
 		  <li><a>stuff</a></li>
