--- a/index.html
+++ b/index.html
@@ -1,32 +1,33 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-	
 <meta charset="utf-8">
-<meta name ="viewport" content="width=device-width">
-<title>Zachary's Website | Home</title>
 <link rel="stylesheet" href="style.css">
+<title>Zachary Website | Index</title>
 </head>
-	<header>
-	<img src="Assets/Logo.png" height="100%" alt=""/>
-		Zachary M Ayotte
-	</header>
-<nav>
-  
-  <ul>
-    <li><a href="mailto:Zachary.M.Ayotte@hotmail.com">Contact Me</a></li>
-	<li><a>Resume</a></li>
-	<li><a>Social Media</a>
-	  <ul>
-		  <li><a href="https://www.linkedin.com/in/zacharyMayotte">Linkedin</a></li>
-		  <li><a>One</a></li>
-		  <li><a>stuff</a></li>
-		  <li><a>stuff</a></li>
-	  </ul>
-	  </li>
-    <li><a>Projects</a></li>
-    <li><a>About Me</a></li>
-    <li><a>Home</a></li>
-  </ul>
-</nav>
+<body>
+	WELCOME TO THE INDEX PAGE OF MY WEBSITE <br>
+	I AM CURENTLY WORKING ON MY WEBSITE <br>
+	SO THIS PAGE IS HERE JUST TO NAVIGATE FROM <br>
+	TEST PAGES THAT I WANT TO TRY AND SEE IF IT <br>
+	BE A GOOD FIT FOR MY WEBSITE<br>
+	<br>
+	HERE ARE SOME PAGES:
+		<ul>
+		<li><a> Main Testing Pages: </a>
+			<ul>
+			<li><a>Testing 1</a></li>
+			<li><a>Testing 2</a></li>
+			<li><a>Testing 3</a></li>
+			<li><a>Testing 4</a></li>
+			</ul></li>
+			<li><a> Main Pages: </a>
+			<ul>
+			<li><a>Testing 1</a></li>
+			<li><a>Testing 2</a></li>
+			<li><a>Testing 3</a></li>
+			<li><a>Testing 4</a></li>
+			</ul></li>
+		</ul>
+</body>
 </html>
