--- a/index.html
+++ b/index.html
@@ -2,32 +2,21 @@
 <html>
 <head>
 <meta charset="utf-8">
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="ccs/Home.css">
 <title>Zachary Website | Index</title>
 </head>
-<body>
-	WELCOME TO THE INDEX PAGE OF MY WEBSITE <br>
-	I AM CURENTLY WORKING ON MY WEBSITE <br>
-	SO THIS PAGE IS HERE JUST TO NAVIGATE FROM <br>
-	TEST PAGES THAT I WANT TO TRY AND SEE IF IT <br>
-	BE A GOOD FIT FOR MY WEBSITE<br>
-	<br>
-	HERE ARE SOME PAGES:
-		<ul>
-		<li><a> Main Testing Pages: </a>
-			<ul>
-			<li><a>Testing 1</a></li>
-			<li><a>Testing 2</a></li>
-			<li><a>Testing 3</a></li>
-			<li><a>Testing 4</a></li>
-			</ul></li>
-			<li><a> Main Pages: </a>
-			<ul>
-			<li><a>Testing 1</a></li>
-			<li><a>Testing 2</a></li>
-			<li><a>Testing 3</a></li>
-			<li><a>Testing 4</a></li>
-			</ul></li>
-		</ul>
-</body>
+
+	<div class="a"> 
+		
+		Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas tincidunt nunc eros, eget tempus arcu sollicitudin a. Pellentesque ligula lectus, euismod ut porttitor ac, placerat in felis. Aliquam consequat quam orci, et tristique enim accumsan in. Suspendisse tellus lectus, fermentum et interdum a, vehicula non arcu. Aenean ullamcorper dignissim sapien, vel mollis urna posuere quis. Integer porta aliquam euismod. Nulla nulla ligula, volutpat suscipit mi quis, pretium imperdiet magna. Donec nisl mi, ultricies ut risus non, scelerisque mattis nisi. Fusce sed felis lorem. Nulla sagittis, velit id vulputate pulvinar, augue lorem porttitor ipsum, ut congue ipsum sapien vel purus. Vestibulum molestie felis arcu, sit amet tempor justo commodo sed. Donec eros elit, volutpat et tellus et, tristique molestie orci. Proin rhoncus turpis arcu, non euismod lectus iaculis vel.
+
+Maecenas a feugiat enim. Fusce sem leo, sagittis ac odio nec, aliquet ornare est. Nullam fringilla non est sed rutrum. Nullam ac nisl sem. Nulla at ipsum et nulla venenatis porttitor. Cras maximus tristique arcu eget auctor. Proin eleifend ac leo eget pulvinar. Etiam in sollicitudin dui, et tempus nulla. Aenean nisi ex, elementum sed imperdiet at, finibus in magna. Nunc quis convallis lacus, at pharetra nibh. Nulla blandit purus risus, quis auctor tortor cursus sit amet. Maecenas risus lacus, efficitur at scelerisque quis, porta id velit. Morbi vitae arcu sed justo iaculis accumsan. Donec arcu lorem, consequat dignissim felis consectetur, tempus tempus nunc. Mauris porttitor dolor arcu, congue malesuada urna placerat ut. Quisque scelerisque lectus risus, eu fringilla lacus aliquet quis.
+
+
+	
+	
+	
+	
+	</div>
+	
 </html>
