Finished Basic Website Design

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 
 	<div class="center"> 
 	<header>
-	  <img src="Assets/Images/Left.png" width="33%" height="257" alt=""/>
-	  <img src="Assets/Images/Center.png" width="33%" height="257" alt=""/>
-	  <img src="Assets/Images/Right.png" width="33%" height="257" alt=""/> 
+	  <img src="Assets/Images/Left.png" alt="" width="33%" height="257" class="Left"/>
+	  <img src="Assets/Images/Center.png" alt="" width="33%" height="257" class="CenterLogo"/>
+	  <img src="Assets/Images/Right.png" alt="" width="33%" height="257" class="Right"/> 
 	</header>
 	<nav>
 		<ul>
-		<a href="http://www.yahoo.com"><li> Option 1 </li></a>
-			<a><li> Option 1 </li></a>
-			<li><a> Option 1 </a></li>
-			<li><a> Option 1 </a></li>
-			<li><a> Option 1 </a></li>
+		<a href="http://www.yahoo.com"><li> About me </li></a>
+			<a><li> Projects </li></a>
+			<li><a> Social Media </a></li>
+			<li><a> Resume </a></li>
+			<li><a> Contact me </a></li>
 		
 		
 		
