--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 
 	<div class="center"> 
 	<header>
-	  <img src="Assets/Images/Left.png" alt="" width="33%" height="257" class="Left"/>
-	  <img src="Assets/Images/Center.png" alt="" width="33%" height="257" class="CenterLogo"/>
-	  <img src="Assets/Images/Right.png" alt="" width="33%" height="257" class="Right"/> 
+	  <center><img src="Assets/Images/logo.png" alt="" width="20%" height="257" class="CenterLogo"/></center> <br>
+		<center><h1>Zachary Ayotte</h1></center>
+
 	</header>
 	<nav>
 		<ul>
