--- a/index.html
+++ b/index.html
@@ -27,16 +27,22 @@
 				
             </a>
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
+              <a class="dropdown-item" href="https://www.linkedin.com/in/zacharymayotte/">LinkedIn</a>
+			  <a class="dropdown-item" href="https://www.instagram.com/_zack5210/">Instagram</a>
+			  <a class="dropdown-item" href="#">Facebook</a>
+			  <a class="dropdown-item" href="https://twitter.com/zachary_ayotte">Twitter</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="https://github.com/Zack5210">GitHub</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link disabled" href="#">Projects</a>
-			  <li class="nav-item">
-            <a class="nav-link disabled" href="#">Resume</a>
+            <a class="nav-link" href="#">Projects</a>
+          </li>
+			 <li class="nav-item">
+            <a class="nav-link" href="#">Resume</a>
+          </li>
+			 <li class="nav-item">
+            <a class="nav-link" href="mailto:Zachary.M.Ayotte@hotmail.com">Contact</a>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
