--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="#">Projects</a>
           </li>
 			 <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
+            <a class="nav-link" href="/Resume.html">Resume</a>
           </li>
 			 <li class="nav-item">
             <a class="nav-link" href="mailto:Zachary.M.Ayotte@hotmail.com">Contact</a>
