--- a/Resume.html
+++ b/Resume.html
@@ -15,7 +15,7 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
@@ -38,8 +38,8 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Projects</a>
           </li>
-			 <li class="nav-item">
-            <a class="nav-link" href="#">Resume</a>
+			 <li class="nav-item active">
+            <a class="nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
           </li>
 			 <li class="nav-item">
             <a class="nav-link" href="mailto:Zachary.M.Ayotte@hotmail.com">Contact</a>
