--- a/Resume.html
+++ b/Resume.html
@@ -19,7 +19,7 @@
             <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#Sends you to the About me Page">About Me</a>
+            <a class="nav-link" href="/About Me.html">About Me</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,10 +36,10 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="/Projects.html">Projects</a>
           </li>
 			 <li class="nav-item active">
-            <a class="nav-link" href="#">Resume<span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="/Resume.html">Resume<span class="sr-only">(current)</span></a>
           </li>
 			 <li class="nav-item">
             <a class="nav-link" href="mailto:Zachary.M.Ayotte@hotmail.com">Contact</a>
