--- a/About Me.html
+++ b/About Me.html
@@ -22,7 +22,7 @@
           <li class="nav-item">
             <a class="nav-link" href="/index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/About Me.html">About Me</a>
           </li>
           <li class="nav-item dropdown">
