--- a/Projects.html
+++ b/Projects.html
@@ -36,7 +36,7 @@
               <a class="dropdown-item" href="https://github.com/Zack5210">GitHub</a>
             </div>
           </li>
-          <li class="nav-item">
+          <li class="nav-item active">
             <a class="nav-link" href="/Projects.html">Projects</a>
           </li>
 			 <li class="nav-item">
