--- a/About Me.html
+++ b/About Me.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>About Page template By Adobe Dreamweaver CC</title>
+<title>Zachary A [About Me]</title>
 <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
 <link href="AboutPageAssets/styles/aboutPageStyle.css" rel="stylesheet" type="text/css">
 
