--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Light Theme</title>
+<title>Zachary A [Projects]</title>
 <link href="css/bootstrap-4.3.1.css" rel="stylesheet">
 <link href="css/simpleGridTemplate.css" rel="stylesheet" type="text/css">
 </head>
