--- a/About Me.html
+++ b/About Me.html
@@ -67,7 +67,7 @@
     <h1>JOHN DOE</h1>
     <h3>REALLY AWESOME WEB DESIGNER</h3>
     <hr>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in.</p>
+    <p>Hello World</p>
   </section>
   <!-- Links to Social network accounts -->
   <aside class="socialNetworkNavBar">
