--- a/Resume.html
+++ b/Resume.html
@@ -42,7 +42,7 @@
       <hr>
       <div class="row">
         <div class="col-6">
-          <h1>John Doe</h1>
+          <h1>Zachary Ayotte</h1>
         </div>
         <div class="col-6">
           <p class="text-right"><a href="">Download my Resume</a></p>
@@ -62,11 +62,10 @@
         <div class="col-md-4 col-sm-12">
           <div class="row justify-content-md-around m-1">
             <address>
-              <strong>John Doe</strong><br>
-              1355 Market St, Suite 900<br>
-              San Francisco, CA 94103<br>
-              <abbr title="Phone">P:</abbr> (123) 456-7890<br>
-              <a href="mailto:#">first.last@example.com</a>
+            <strong>Zachary Ayotte</strong><br>
+            Address: (Comming Soon)<br>
+            <u>P: (083)-388-6071</u><br>
+            <a href="mailto:#">Zachary.M.Ayotte@hotmail.com</a>
             </address>
           </div>
         </div>
@@ -78,49 +77,56 @@
           <hr>
           <div class="row">
             <div class="col-6">
-              <h4>College of Web Design</h4>
+              <h4>Limerick Institute of Technology </h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span> Jan 2002 - Dec 2006</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>Sept 2019 - Present</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Bachelors</span></h5>
+          <h5><span class="badge badge-secondary">Bachelor in Game Design and Development</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
           <div class="row">
             <div class="col-6">
-              <h4>University of Web Design</h4>
+              <h4>St. Lawrence College (Cornwall Ontario)</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span> Jan 2007 - Dec 2008</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>Sept 2017 - May 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Masters</span></h5>
+          <h5><span class="badge badge-secondary">Games Programming Diploma</span></h5>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+			<div class="row">
+            <div class="col-6">
+              <h4>Catholic High School La Citadelle</h4>
+            </div>
+            <div class="col-6">
+              <h5 class="text-right"><span aria-hidden="true"></span>May 2017</h5>
+            </div>
+          </div>
+			<h5><span class="badge badge-secondary">Diploma</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>Skill Set</h2>
           <hr>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"> HTML</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"> C++</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"> CSS</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 75%"> C#</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%"> JAVASCRIPT</div>
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 30%"> HTML/CSS</div>
           </div>
-          <div class="progress mt-4">
-            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%"> PHP</div>
-          </div>
-          <div class="progress mt-4">
-            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100" style="width: 55%"> WORDPRESS</div>
-          </div>
+          
+          
           <div class="progress mt-4">
             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> PHOTOSHOP</div>
           </div>
           <div class="progress mt-4">
             <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> ILLUSTRATOR</div>
           </div>
+			&nbsp
         </div>
       </div>
       <hr>
