--- a/Resume.html
+++ b/Resume.html
@@ -80,7 +80,7 @@
               <h4>Limerick Institute of Technology </h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span>Sept 2019 - Present</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>September 2019 - Present</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">Bachelor in Game Design and Development</span></h5>
@@ -90,7 +90,7 @@
               <h4>St. Lawrence College (Cornwall Ontario)</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span>Sept 2017 - May 2019</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span>September 2017 - May 2019</h5>
             </div>
           </div>
           <h5><span class="badge badge-secondary">Games Programming Diploma</span></h5>
@@ -136,18 +136,19 @@
         <div class="col-md-6 col-sm-12">
           <div class="row">
             <div class="col-5">
-              <h4>ABC Corp.</h4>
+              <h4>St. Lawrence College (Cornwall)</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span> Jan 2002 - Dec 2006</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - May 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Web Developer</span></h5>
+          <h5><span class="badge badge-secondary">3D Project Research</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
           <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+            <li>Worked on developing 3D games that could be incorporated in a VR environment.</li>
+            <li>Reviewed and developed code that went into the 3D portion of the project.
+</li>
+            <li>Assisted in implementing the Summer Game Project in both the Oculus Rift and the Oculus Quest.</li>
           </ul>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -156,10 +157,10 @@
               <h4>XYZ Corp.</h4>
             </div>
             <div class="col-6">
-              <h5 class="text-right"><span aria-hidden="true"></span> Jan 2002 - Dec 2006</h5>
+              <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - August 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Senior Web Developer</span></h5>
+          <h5><span class="badge badge-secondary">Web Developer</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
           <ul>
             <li>Lorem ipsum dolor sit amet.</li>
