--- a/Resume.html
+++ b/Resume.html
@@ -154,7 +154,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="row">
             <div class="col-5">
-              <h4>XYZ Corp.</h4>
+              <h4>Fence Depot</h4>
             </div>
             <div class="col-6">
               <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - August 2019</h5>
@@ -163,9 +163,10 @@
           <h5><span class="badge badge-secondary">Web Developer</span></h5>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
           <ul>
-            <li>Lorem ipsum dolor sit amet.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-            <li>Lorem ipsum dolor sit amet, consectetur adipisicing.</li>
+            <li>Reorganized online database to make it more efficient for users</li>
+            <li>Filled in and created information for products on the online store.</li>
+            <li>Helped suggest improvements for the online webstore to improve customer accessibility.</li>
+		    <li>Used HTML to create some webpages.</li>
           </ul>
         </div>
       </div>
