--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
       </div>
     </nav>
     <section>
-      <div class="jumbotron text-center mt-2">
+  <div class="jumbotron text-center mt-2">
         <div class="container">
           <div class="row">
             <div class="col-12">
               <h1>Welcome to my website</h1>
-              <p>Currently I'm working on the creation of this website. Feel free to navigate though this site</p>
-              <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
+                  <p>Currently I'm working on the creation of this website. Feel free to navigate you</p>
+          <p><a class="btn btn-primary btn-lg" href="#" role="button">Learn more »</a></p>
             </div>
           </div>
         </div>
