--- a/Resume.html
+++ b/Resume.html
@@ -109,22 +109,35 @@
         <div class="col-md-6 col-sm-12">
           <h2>Skill Set</h2>
           <hr>
+          <h6 class="text-capitalize"><strong>Programming Languages</strong></h6>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 85%"> C++</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width: 95%"> C++</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 75%"> C#</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%"> C#</div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 30%"> HTML/CSS</div>
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> OpenGl </div>
           </div>
-          
-          
+<div class="progress mt-4">
+        <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 45%"> HTML/CSS</div>
+          </div>
+			 <div class="progress mt-4">
+            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 40%"> JavaScript </div>
+          </div>
+          &nbsp
+    	<h6 class="text-capitalize"><strong>Others</strong></h6>
           <div class="progress mt-4">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> PHOTOSHOP</div>
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 90%"> Unity </div>
           </div>
           <div class="progress mt-4">
-            <div class="progress-bar bg-danger" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> ILLUSTRATOR</div>
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> Unreal </div>
+          </div>
+			<div class="progress mt-4">
+            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%"> GitHub </div>
+          </div>
+			 <div class="progress mt-4">
+            <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 40%"> SQL </div>
           </div>
 			&nbsp
         </div>
