--- a/Resume.html
+++ b/Resume.html
@@ -134,7 +134,7 @@
             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%"> Unreal </div>
           </div>
 			<div class="progress mt-4">
-            <div class="progress-bar bg-success" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%"> GitHub </div>
+            <div class="progress-bar bg-info" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 70%"> GitHub </div>
           </div>
 			 <div class="progress mt-4">
             <div class="progress-bar bg-warning" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 40%"> SQL </div>
