--- a/Resume.html
+++ b/Resume.html
@@ -190,7 +190,7 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8  col-12 jumbotron">
-            <form>
+            <form action="mailto:Zachary.m.ayotte@hotmail.com" method="post" entype = "text/plain">
               <div class="form-group">
                 <label for="name">Name</label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
@@ -206,7 +206,7 @@
                 <span id="messageHelp" class="form-text text-muted" style="display: none;">Please enter a message.</span>
               </div>
               <div class="text-center">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <button type="submit" class="btn btn-primary" value="Send">Submit</button>
               </div>
             </form>
           </div>
