Resume cont Again

--- a/Resume.html
+++ b/Resume.html
@@ -52,9 +52,9 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="media">
-            <img class="mr-3" src="images/115X115.gif" alt="Generic placeholder image">
+            <img class="mr-3" src="/images/115X115.gif"alt="Generic placeholder image">
             <div class="media-body">
-              <h5 class="mt-0">Web Developer</h5>
+              <h5 class="mt-0">Game Programmer</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
             </div>
           </div>
@@ -84,7 +84,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">Bachelor in Game Design and Development</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+          <p> </p>
           <div class="row">
             <div class="col-6">
               <h4>St. Lawrence College (Cornwall Ontario)</h4>
@@ -94,7 +94,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">Games Programming Diploma</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+          <p> </p>
 			<div class="row">
             <div class="col-6">
               <h4>Catholic High School La Citadelle</h4>
@@ -104,7 +104,7 @@
             </div>
           </div>
 			<h5><span class="badge badge-secondary">Diploma</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+          <p></p>
         </div>
         <div class="col-md-6 col-sm-12">
           <h2>Skill Set</h2>
@@ -156,7 +156,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">3D Project Research</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+          <p> hello </p>
           <ul>
             <li>Worked on developing 3D games that could be incorporated in a VR environment.</li>
             <li>Reviewed and developed code that went into the 3D portion of the project.
@@ -174,7 +174,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">Web Developer</span></h5>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint, recusandae, corporis, tempore nam fugit deleniti sequi excepturi quod repellat laboriosam soluta laudantium amet dicta non ratione distinctio nihil dignissimos esse!</p>
+          <p></p>
           <ul>
             <li>Reorganized online database to make it more efficient for users</li>
             <li>Filled in and created information for products on the online store.</li>
