--- a/Resume.html
+++ b/Resume.html
@@ -156,7 +156,7 @@
             </div>
           </div>
           <h5><span class="badge badge-secondary">3D Project Research</span></h5>
-          <p> hello </p>
+          <p></p>
           <ul>
             <li>Worked on developing 3D games that could be incorporated in a VR environment.</li>
             <li>Reviewed and developed code that went into the 3D portion of the project.
@@ -167,7 +167,7 @@
         <div class="col-md-6 col-sm-12">
           <div class="row">
             <div class="col-5">
-              <h4>Fence Depot</h4>
+              <h4>Fence Depot (Cornwall Ontario)</h4>
             </div>
             <div class="col-6">
               <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - August 2019</h5>
