--- a/Resume.html
+++ b/Resume.html
@@ -52,7 +52,7 @@
       <div class="row">
         <div class="col-md-8 col-sm-12">
           <div class="media">
-            <img class="mr-3" src="/images/115X115.gif"alt="Generic placeholder image">
+            <img class="mr-3" src="images/Profile Picture.jpg" alt="Generic placeholder image">
             <div class="media-body">
               <h5 class="mt-0">Game Programmer</h5>
               Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
@@ -63,8 +63,9 @@
           <div class="row justify-content-md-around m-1">
             <address>
             <strong>Zachary Ayotte</strong><br>
-            Address: (Comming Soon)<br>
-            <u>P: (083)-388-6071</u><br>
+			Home: <i>Cornwall Ontario (Canada)</i><br>
+			Current: <i>Thurles, Co. Tipperary (Ireland)</i <br>
+            <i>Phone: (083)-388-6071</i><br>
             <a href="mailto:#">Zachary.M.Ayotte@hotmail.com</a>
             </address>
           </div>
@@ -83,7 +84,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span>September 2019 - Present</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Bachelor in Game Design and Development</span></h5>
+          <h5><span class="badge badge-primary">Bachelor in Game Design and Development</span></h5>
           <p> </p>
           <div class="row">
             <div class="col-6">
@@ -93,7 +94,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span>September 2017 - May 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Games Programming Diploma</span></h5>
+          <h5><span class="badge badge-primary">Games Programming Diploma</span></h5>
           <p> </p>
 			<div class="row">
             <div class="col-6">
@@ -103,7 +104,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span>May 2017</h5>
             </div>
           </div>
-			<h5><span class="badge badge-secondary">Diploma</span></h5>
+			<h5><span class="badge badge-primary">Diploma</span></h5>
           <p></p>
         </div>
         <div class="col-md-6 col-sm-12">
@@ -155,7 +156,7 @@
               <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - May 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">3D Project Research</span></h5>
+          <h5><span class="badge badge-primary">3D Project Research</span></h5>
           <p></p>
           <ul>
             <li>Worked on developing 3D games that could be incorporated in a VR environment.</li>
@@ -167,13 +168,13 @@
         <div class="col-md-6 col-sm-12">
           <div class="row">
             <div class="col-5">
-              <h4>Fence Depot (Cornwall Ontario)</h4>
+              <h4>Fence Depot (Cornwall)</h4>
             </div>
             <div class="col-6">
               <h5 class="text-right"><span aria-hidden="true"></span> April 2019 - August 2019</h5>
             </div>
           </div>
-          <h5><span class="badge badge-secondary">Web Developer</span></h5>
+          <h5><span class="badge badge-primary">Web Developer</span></h5>
           <p></p>
           <ul>
             <li>Reorganized online database to make it more efficient for users</li>
@@ -184,7 +185,6 @@
         </div>
       </div>
       <hr>
-      </dv>
       <hr>
       <footer class="text-center">
         <div class="container">
