--- a/Resume.html
+++ b/Resume.html
@@ -30,8 +30,18 @@
 			 <li class="nav-item active">
             <a class="nav-link" href="/Resume.html">Resume<span class="sr-only">(current)</span></a>
           </li>
-			 <li class="nav-item">
-            <a class="nav-link" href="mailto:Zachary.M.Ayotte@hotmail.com">Contact</a>
+			 <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Social Media
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="https://www.linkedin.com/in/zacharymayotte/">LinkedIn</a>
+			  <a class="dropdown-item" href="https://github.com/Zack5210">GitHub</a>
+			  <div class="dropdown-divider"></div>
+			  <a class="dropdown-item" href="https://www.instagram.com/_zack5210/">Instagram</a>
+			  <a class="dropdown-item" href="#">Facebook</a>
+			  <a class="dropdown-item" href="https://twitter.com/zachary_ayotte">Twitter</a>
+            </div>
           </li>
         </ul>
         <form class="form-inline my-2 my-lg-0">
@@ -63,8 +73,8 @@
           <div class="row justify-content-md-around m-1">
             <address>
             <strong>Zachary Ayotte</strong><br>
-			Home: <i>Cornwall Ontario (Canada)</i><br>
-			Current: <i>Thurles, Co. Tipperary (Ireland)</i <br>
+			Home: <i>Cornwall Ontario, Canada</i><br>
+			Current: <i>Thurles, Co. Tipperary, Ireland</i <br>
             <i>Phone: (083)-388-6071</i><br>
             <a href="mailto:#">Zachary.M.Ayotte@hotmail.com</a>
             </address>
