Adding Projects to  Project

--- a/Projects.html
+++ b/Projects.html
@@ -68,7 +68,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Item 2 Heading</h5>
                   <p>Item 2 Description</p>
-                </div>
+                </div> <!Testing>
               </div>
               <div class="carousel-item">
                 <img class="d-block w-100" src="images/1920x500.gif" alt="Third slide">
@@ -99,28 +99,47 @@
       <div class="row text-center">
         <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
-            <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
+            <img class="card-img-top" src="images/Frogger.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title"> <strong>Frogger (2017)</strong></h5>
+              <b>St-Lawrence College Project</b>
+              <p class="card-text">A Project in our first year was to create a 
+			  game that is similar to the popular game Frogger. This project used SDL and C++ 
+			  and also paint for creating my own images. 
+			  <br> <br>
+			  The game is similar to frogger where the objectives is to get to the life 
+			  rings while avoiding the cars and the water by standing on the logs and avoiding 
+			  the cars.</p>
 </div>
           </div>
         </div>
         <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
-            <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
+            <img class="card-img-top" src="images/Bradon's Revenge.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+				<h5 class="card-title"><b>Brandon's Revenge</b></h5>
+				<b> St-Lawrence College Group Assignment </b>
+              <p class="card-text">Brandon's Revenge is a game created as a project  which is 
+				  sound focused. Simular the Slenderman the objective of the game is you need to collect notes to spell 
+				  a name. once you collect all the notes you win the game.
+			      <br><br>
+				  In this group project. I worked on  the pathfinding for the enemy</p>
 </div>
           </div>
         </div>
         <div class="col-md-4 pb-1 pb-md-0">
           <div class="card">
-            <img class="card-img-top" src="images/400X200.gif" alt="Card image cap">
+            <img class="card-img-top" src="images/Money Simulator.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <h5 class="card-title">MONEY SIMULATOR</h5>
+              <b> UNREAL CLICKER GAME </b>
+				<p class="card-text">
+				Money Simulator is a game that I created in unreal where the objective of the game 
+				is to click the buttons to create money and buy more stuff with it.
+				<br><br>
+				The game was inspired by Adventure Capitalist.
+                <br><br>
+				The game can also be played in VR using the Occulus rift.</p>
 </div>
           </div>
         </div>
