--- a/Projects.html
+++ b/Projects.html
@@ -46,54 +46,21 @@
 </form>
       </div>
     </nav>
-<div class="container mt-3">
-  <div class="row">
-        <div class="col-12">
-          <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-              <li data-target="#carouselExampleControls" data-slide-to="0" class="active"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="1"></li>
-              <li data-target="#carouselExampleControls" data-slide-to="2"></li>
-            </ol>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img class="d-block w-100" src="images/1920x500.gif" alt="First slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Item 1 Heading</h5>
-                  <p>Item 1 Description</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/1920x500.gif" alt="Second slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Item 2 Heading</h5>
-                  <p>Item 2 Description</p>
-                </div> <!Testing>
-              </div>
-              <div class="carousel-item">
-                <img class="d-block w-100" src="images/1920x500.gif" alt="Third slide">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Item 3 Heading</h5>
-                  <p>Item 3 Description</p>
-                </div>
-              </div>
+      <div class="jumbotron">
+        <div class="container">
+          <div class="row">
+            <div class="text-center col-md-8 col-12 mx-auto">
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, praesentium, autem, veritatis error quidem eos fuga atque asperiores magnam deleniti necessitatibus sequi</p>
             </div>
-            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-            </a>
+          </div>
+          <div class="row">
+            <div class="col-sm-4 col-auto mx-auto"> </div>
           </div>
         </div>
       </div>
-      <hr>
-    </div>
 
     <hr>
-    <h2 class="text-center">RECOMMENDED PRODUCTS</h2>
+    <h2 class="text-center">PROJECTS</h2>
     <hr>
     <div class="container">
       <div class="row text-center">
@@ -117,7 +84,7 @@
           <div class="card">
             <img class="card-img-top" src="images/Bradon's Revenge.png" alt="Card image cap">
             <div class="card-body">
-				<h5 class="card-title"><b>Brandon's Revenge</b></h5>
+				<h5 class="card-title"><strong>Brandon's Revenge</strong></h5>
 				<b> St-Lawrence College Group Assignment </b>
               <p class="card-text">Brandon's Revenge is a game created as a project  which is 
 				  sound focused. Simular the Slenderman the objective of the game is you need to collect notes to spell 
@@ -131,7 +98,7 @@
           <div class="card">
             <img class="card-img-top" src="images/Money Simulator.png" alt="Card image cap">
             <div class="card-body">
-              <h5 class="card-title">MONEY SIMULATOR</h5>
+              <h5 class="card-title"><strong>Money Simulator</strong></h5>
               <b> UNREAL CLICKER GAME </b>
 				<p class="card-text">
 				Money Simulator is a game that I created in unreal where the objective of the game 
