Resume added mabee

--- a/Resume.html
+++ b/Resume.html
@@ -55,7 +55,8 @@
           <h1>Zachary Ayotte</h1>
         </div>
         <div class="col-6">
-          <p class="text-right"><a href="">Download my Resume</a></p>
+          <p class="text-right"><a href="https://docs.google.com/document/d/16Om35yrXQd5xdXvMPf0HGb7qWnrDjDifBjTJhbLwZE4/export?format=pdf">Download My Home Resume</a> <br>
+			<a href="https://docs.google.com/document/d/1exqOJaWfDaI-cBL7jDkCVfvgZVU2wLmns_lLMitfYHE/export?format=pdf">Download Current Resume</a></p>
         </div>
       </div>
       <hr>
